Geany 0.10.1 (TBA)

	Bugs fixed:
	* Wrong tab foreground colour for unmodified documents.


Geany 0.10 (December 21, 2006)

    Changes:
    * Added a dialog to insert HTML special characters.
    * Added new command line option --line to set the initial line for
      the first opened file.
    * Implemented new, own Undo system to undo/redo encoding changes.
    * Added simple parser for filetype Diff to create tags for each
      patched file in a diff file.
    * Added new encoding "None" to open files without any character
      conversions.
    * Added stop button(using the Run button) to cancel the execution
      of a command like Run, Compile or Build.
    * New filetype VHDL.
    * New scintilla lexer for filetype D with several improvements.
    * Improved auto completion of multi line comments
    * Added option to execute programs in the VTE instead of executing
      them in a terminal emulation window
    * Removed the limit on the number of files open.
    * Save the build includes and arguments when quitting.
    * Added Next Message search command and Next Error build command.
    * Make search bar automatically wraparound if necessary.
    * Applied patch from Bob Doan to prevent unnecessary search
      scrolling and add a preference to suppress some of the search
      dialogs.
    * Added Find Previous, Find All in Document/Session buttons for the
      Find dialog.
    * Added Replace (but don't Find) button for the Replace dialog.
    * Added 'Hide Message Window' popup menu command.
    * Added Alt-[1-9] shortcuts to switch to a certain tab number.
    * Limit search dialog history to 30 entries.
    * Change python default compile command to create a compiled
      python .pyc file (thanks to Bajusz Tamás).

    Windows changes:
    * Fix #1611530 'file has changed' message on Windows after saving.
    * Fixed wrong paste behaviour under Windows with some applications.

    Bugs fixed: