@@ -2,6 +2,7 @@ Geany 0.10.1 (TBA)
 
 	Bugs fixed:
 	* Wrong tab foreground colour for unmodified documents.
+	* Fixed crashes when closing dialogs by clicking X on some systems.
 
 
 Geany 0.10 (December 21, 2006)
